<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1100dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/vaporwave" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/arkanoidvw" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="100dp"
        android:paddingRight="16dp"
        app:layout_anchor="@+id/imageView"
        app:layout_anchorGravity="center">

        <Button
            android:id="@+id/button_singleplayer"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape_home"
            android:fontFamily="@font/feasfbrg"
            android:onClick="sendMessageSingleplayer"
            android:text="@string/singleplayer"
            android:textColor="#FFFFFF"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeStepGranularity="2sp"/>

        <Button
            android:id="@+id/button_multiplayer"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape_home"
            android:fontFamily="@font/feasfbrg"
            android:onClick="sendMessageMultiplayer"
            android:text="@string/multiplayer"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="25sp"
            android:textColor="#FFFFFF"
            android:textSize="35dp" />

        <Button
            android:id="@+id/button_impostazioni"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape_home"
            android:fontFamily="@font/feasfbrg"
            android:onClick="sendMessageImpostazioni"
            android:text="@string/impostazioni"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="30sp"
            android:textColor="#FFFFFF"
             />

        <Button
            android:id="@+id/button_classifica"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape_home"
            android:fontFamily="@font/feasfbrg"
            android:onClick="sendMessageRanking"
            android:text="@string/classifica"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="30sp"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/button_editor"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape_home"
            android:fontFamily="@font/feasfbrg"
            android:onClick="sendMessageEditor"
            android:text="@string/editor"
            android:textColor="#FFFFFF"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeStepGranularity="2sp"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>